80% done na po sir.

--- a/exam/index.html
+++ b/exam/index.html
@@ -62,10 +62,12 @@
                                 Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonFind">View Image/s</button>
                             </div>
-                    </div>
+                        </div>
                     </div>
                     <!--card-download-->
-                    <div class="card"> <div class="card-header" id="header-card-download"> <h2 class="mb-0">
+                    <div class="card">
+                        <div class="card-header" id="header-card-download">
+                            <h2 class="mb-0">
                                 <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-download" aria-expanded="false" aria-controls="card-download">
                                     Download Distribution
                                 </button>
@@ -106,11 +108,142 @@
             </div>
 <!--#########################################################################################################################################################-->
             <!--install-->
-            <div class="tab-pane fade" id="nav-install" role="tabpanel" aria-labelledby="nav-install-tab">TODO</div>
+            <div class="tab-pane fade" id="nav-install" role="tabpanel" aria-labelledby="nav-install-tab">
+                <div class="accordion pad" id="accordionHead">
+                    <!--card-install-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-install">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-install" aria-expanded="false" aria-controls="card-install">
+                                    Install
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-install" class="collapse" aria-labelledby="header-card-install" data-parent="#accordionHead">
+                            <div class="card-body">
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonInstall">View Video</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--card-update-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-update">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-update" aria-expanded="false" aria-controls="card-update">
+                                    Update
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-update" class="collapse" aria-labelledby="header-card-update" data-parent="#accordionHead">
+                            <div class="card-body">
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonUpdate">View Image/s</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--card-rpmfusion-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-rpmfusion">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-rpmfusion" aria-expanded="false" aria-controls="card-rpmfusion">
+                                    RPM Fusion
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-rpmfusion" class="collapse" aria-labelledby="header-card-rpmfusion" data-parent="#accordionHead">
+                            <div class="card-body">
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonRpm">View Image/s</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--card-codec-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-codec">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-codec" aria-expanded="false" aria-controls="card-codec">
+                                    Multimedia Codecs
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-codec" class="collapse" aria-labelledby="header-card-codec" data-parent="#accordionHead">
+                            <div class="card-body">
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonCodec">View Image/s</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!--card-tlp-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-tlp">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-tlp" aria-expanded="false" aria-controls="card-tlp">
+                                    TLP for laptops
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-tlp" class="collapse" aria-labelledby="header-card-tlp" data-parent="#accordionHead">
+                            <div class="card-body">
+                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
+                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
+                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
+                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonTlp">View Image/s</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 <!--#########################################################################################################################################################-->
             <!--maintain-->
-            <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">TODO</div>
+            <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">
+                <div class="table-responsive-md">
+                    <table class="table">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">How to</th>
+                                <th scope="col">Command</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Sudo required?</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td scope="row">Update</td>
+                                <td>sudo dnf update</td>
+                                <td>update the fedora repository</td>
+                                <td>yes</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
 <!--#########################################################################################################################################################-->
         </div>
         <!--Modals-->
@@ -154,6 +287,89 @@
                         <img class="img-size" src="./images/7.png" />
                         <img class="img-size" src="./images/8.png" />
                         <img class="img-size" src="./images/9.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--install-modal-->
+        <div class="modal fade" id="buttonInstall" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <video width="100%" height="auto" controls>
+                            <source src="./images/install.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+                        </video>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--update-modal-->
+        <div class="modal fade" id="buttonUpdate" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/10.png" />
+                        <img class="img-size" src="./images/11.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--rpm-modal-->
+        <div class="modal fade" id="buttonRpm" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/12.png" />
+                        <img class="img-size" src="./images/13.png" />
+                        <img class="img-size" src="./images/14.png" />
+                        <img class="img-size" src="./images/15.png" />
+                        <img class="img-size" src="./images/16.png" />
+                        <img class="img-size" src="./images/17.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--codec-modal-->
+        <div class="modal fade" id="buttonCodec" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/18.png" />
+                        <img class="img-size" src="./images/19.png" />
+                        <img class="img-size" src="./images/20.png" />
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--tlp-modal-->
+        <div class="modal fade" id="buttonTlp" data-backdrop="static" data-keyboard="false" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body">
+                        <img class="img-size" src="./images/21.png" />
+                        <img class="img-size" src="./images/22.png" />
+                        <img class="img-size" src="./images/23.png" />
+                        <img class="img-size" src="./images/24.png" />
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
