90% done na po sir

--- a/exam/index.html
+++ b/exam/index.html
@@ -121,10 +121,6 @@
                         </div>
                         <div id="card-install" class="collapse" aria-labelledby="header-card-install" data-parent="#accordionHead">
                             <div class="card-body">
-                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
-                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
-                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
-                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonInstall">View Video</button>
                             </div>
                         </div>
@@ -140,10 +136,6 @@
                         </div>
                         <div id="card-update" class="collapse" aria-labelledby="header-card-update" data-parent="#accordionHead">
                             <div class="card-body">
-                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
-                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
-                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
-                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonUpdate">View Image/s</button>
                             </div>
                         </div>
@@ -159,10 +151,6 @@
                         </div>
                         <div id="card-rpmfusion" class="collapse" aria-labelledby="header-card-rpmfusion" data-parent="#accordionHead">
                             <div class="card-body">
-                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
-                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
-                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
-                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonRpm">View Image/s</button>
                             </div>
                         </div>
@@ -178,10 +166,6 @@
                         </div>
                         <div id="card-codec" class="collapse" aria-labelledby="header-card-codec" data-parent="#accordionHead">
                             <div class="card-body">
-                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
-                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
-                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
-                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonCodec">View Image/s</button>
                             </div>
                         </div>
@@ -197,10 +181,6 @@
                         </div>
                         <div id="card-tlp" class="collapse" aria-labelledby="header-card-tlp" data-parent="#accordionHead">
                             <div class="card-body">
-                                Maraming pwedeng pagkuhanan ng mga distribution ng Gnu/linux operating system, pero mabuting aralin at maiiging piliin ang iyong unang magiging distro.
-                                Isa sa mga kilalang site ang <a href="http://distrowatch.com">distrowatch</a> upang gawin ito. Sa distro watch pwede ka magbasa, mag research, at maintindihan ang mga pinagkakaiba
-                                ng mga distro. May mga link rin dito na dadalhin ka sa official website ng distribution na iyong napili.
-                                Ang isa sa mga pinaka popular na distro ay <a href="https://ubuntu.com">Ubuntu</a>, <a href="https://getfedora.org">Fedora</a>, <a href="https://www.opensuse.org">OpenSuse</a>, <a href="https://wwww.debian.org">Debian</a>, at <a href="https://www.archlinux.org">Arch Linux</a>.<br><br>
                                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#buttonTlp">View Image/s</button>
                             </div>
                         </div>
@@ -211,37 +191,96 @@
 <!--#########################################################################################################################################################-->
             <!--maintain-->
             <div class="tab-pane fade" id="nav-maintain" role="tabpanel" aria-labelledby="nav-maintain-tab">
-                <div class="table-responsive-md">
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">How to</th>
-                                <th scope="col">Command</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">Sudo required?</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td scope="row">Update</td>
-                                <td>sudo dnf update</td>
-                                <td>update the fedora repository</td>
-                                <td>yes</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                        </tbody>
-                    </table>
+                <div class="accordion pad" id="accordionHead">
+                    <!--card-maintenance-->
+                    <div class="card">
+                        <div class="card-header" id="header-card-maintenance">
+                            <h2 class="mb-0">
+                                <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-maintenance" aria-expanded="false" aria-controls="card-maintenance">
+                                    Maintainance
+                                </button>
+                            </h2>
+                        </div>
+                        <div id="card-maintenance" class="collapse" aria-labelledby="header-card-maintenance" data-parent="#accordionHead">
+                            <div class="card-body">
+                                <div class="table-responsive-md">
+                                    <table class="table">
+                                        <thead class="thead-dark">
+                                            <tr>
+                                                <th scope="col">How to</th>
+                                                <th scope="col">Command</th>
+                                                <th scope="col">Description</th>
+                                                <th scope="col">Sudo required?</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td scope="row">Update</td>
+                                                <td>sudo dnf update</td>
+                                                <td>update the fedora repository</td>
+                                                <td>yes</td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"></th>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
+                                            <tr>
+                                                <th scope="row"></th>
+                                                <td></td>
+                                                <td></td>
+                                                <td></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!--card-learn-->
+                <div class="card">
+                    <div class="card-header" id="header-card-learn">
+                        <h2 class="mb-0">
+                            <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#card-learn" aria-expanded="false" aria-controls="card-learn">
+                                Learn from other sources
+                            </button>
+                        </h2>
+                    </div>
+                    <div id="card-learn" class="collapse" aria-labelledby="header-card-learn" data-parent="#accordionHead">
+                        <div class="card-body">
+                            <div class="table-responsive-md">
+                                <table class="table">
+                                    <thead class="thead-dark">
+                                        <tr>
+                                            <th scope="col">Learn</th>
+                                            <th scope="col">Website</th>
+                                            <th scope="col">Link</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td scope="row"></td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"></th>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <th scope="row"></th>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 <!--#########################################################################################################################################################-->
